Release 3.3
========================================================================================================================

Version 3.3 is a minor release.

Compatibility with previous releases
====================================
Version 3.3 is source and binary compatible with 3.2.

What's new in 3.3:
==================
JEXL 3.3 brings the ability to configure permissions on libraries in the manner pioneered
with the @NoJexl annotation on source code. This is achieved through a crude but light mechanism akin to
a security manager that controls what JEXL can introspect and thus expose to scripts.
Used in conjunction with options (JexlOptions) and features (JexlFeatures), the permissions (JexlPermissions)
allow fine-tuning the scripting integration into any project.
JEXL 3.3 also adds some syntactic (ECMAScript) features (let, const, =>, for, ...) to further reduce
the skill set required to write scripts.

New Features in 3.3:
====================

* JEXL-392:     Enable namespace declaration based on scripts
* JEXL-391:     Improve in/=~ operator when arguments are arrays and collections
* JEXL-390:     Pragmas should not be statements
* JEXL-389:     Improve parsing timings
* JEXL-385:     Support disabling fortran-style relational operators syntax
* JEXL-382:     Simplify grammar and lexical state management
* JEXL-380:     Multiple values per pragma key
* JEXL-379:     Allow new to use class identifier
* JEXL-373:     Add support for prefix/postfix increment/decrement operators
* JEXL-372:     Add support for 'standard' for loop
* JEXL-369:     Add 'let' and 'const' variable declarations
* JEXL-367:     Named function and fat-arrow (=>) lambda syntax
* JEXL-366:     Fail to evaluate string and number comparison
* JEXL-365:     Lambda expressions
* JEXL-363:     Allow retrieving captured variables in script
* JEXL-360:     Add missing bitshift operators ( >>, >>>, <<)
* JEXL-359:     Allow per-operator arithmetic handling of null arguments