@@ -25,7 +25,8 @@
     <body>
         <menu name="JEXL">
             <item name="Overview"                href="index.html" />
-            <item name="Javadoc 3.2.1"           href="apidocs/index.html"/>
+            <item name="JEXL 3.3 Release notes"  href="relnotes33.html"/>
+            <item name="Javadoc 3.3"           href="apidocs/index.html"/>
             <item name="Javadoc 2.1.1"           href="javadocs/apidocs-2.1.1/index.html"/>
             <item name="Javadoc 1.1"             href="javadocs/apidocs-1.1/index.html"/>
             <item name="Download"                href="download_jexl.cgi"/>
